# ailex

./: .dockerignore  .gitignore  AGENTS.md  AGENT_MCP_VALIDATION_REPORT_JA.md  AILEX_ANALYSIS_JA.md  AILEX_README.md  BENCHMARK_VALIDATION_REPORT_JA.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CONTRIBUTING.md  DOGFOOD.md  Dockerfile  EXPERIMENTS.md  FUNCTION_VALIDATION_REPORT_JA.md  ICSE_2027_DEMO_SUBMISSION_PLAN_JA.md  LANGUAGE.md  LICENSE  NOVELTY.md  OPENAI_CALIBRATION_V2_PLAN_2026-07-23_JA.md  OPENAI_CALIBRATION_V2_RESULT_2026-07-24_JA.md  OPENAI_CALIBRATION_V3_PLAN_2026-07-24_JA.md  OPENAI_CALIBRATION_V3_RESULT_2026-07-24_JA.md  OPENAI_CALIBRATION_V4_PLAN_2026-07-24_JA.md  OPENAI_CALIBRATION_V4_RESULT_2026-07-24_JA.md  OPENAI_PILOT_RESULT_2026-07-22_JA.md  OPENAI_PROVIDER_VALIDATION_REPORT_JA.md  PATCH_VALIDATION_REPORT_JA.md  PILOT_EXPERIMENT_PROTOCOL_JA.md  PRIMER.en.md  PRIMER.md  PRIOR_ART.md  PROCESS.md  PROJECT_SUMMARY_JA.md  QUICKSTART.md  README.draft.md  README.ja.md  README.md  SECURITY.md  SECURITY_QUALITY_BASELINE_2026-07-21_JA.md  (+14 more)
experimental/intentir/: ACTION_FUNCTION_VALIDATION_REPORT_JA.md  AILEX_ANALYSIS_JA.md  CAPABILITY_VALIDATION_REPORT_JA.md  MODULE_VALIDATION_REPORT_JA.md  PROJECT_SUMMARY_JA.md  README.md  RELATION_VALIDATION_REPORT_JA.md  VALIDATION_REPORT_JA.md  pyproject.toml
experimental/intentir/examples/: broken.intent  failing.intent  functions.intent  inventory_v2.intent  relations.intent  todo.intent
experimental/intentir/intentir/: __init__.py  __main__.py  cli.py  compiler.py  expressions.py  formatter.py  ir.py  migration.py  (+6 more)
(+116 files in other folders)
