[project]
name = "intentir"
version = "0.10.0"
description = "A content-addressed semantic IR with executable contracts for AI development workflows."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
intentir = "intentir.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
